[tool.poetry]
name = "alpaca-py-nopandas"
version = "0.1.2"
description = "A forked Python SDK for Alpaca APIs (with Pandas removed)"
authors = [
    "Will Tesler <willtesler@gmail.com>",
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/wtesler/alpaca-py-nopandas"
documentation = "https://alpaca.markets/docs/python-sdk/"
packages = [
    { include = "alpaca" }
]
include = [ "alpaca/py.typed" ]

[tool.poetry.dependencies]
python = "^3.8.0"
python-dateutil = "^2.9.0"
requests = "^2.30.0"
pydantic = "^2.0.3"
pytz = "^2025.2"
msgpack = "^1.0.3"
websockets = ">=10.4"
sseclient-py = "^1.7.2"


[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-asyncio = "^0.23.7"
requests-mock = "^1.9.3"
black = "^24.3.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
furo = "^2022.2.14"
Sphinx = "^5.0.1"
sphinx-copybutton = "^0.5.0"
enum-tools = "^0.9.0"
sphinx-toolbox = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.4.2", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable=false

[tool.poetry-dynamic-versioning.substitution]
folders = [
  { path = "alpaca" }
]
